--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
+    "fuzzysort": "^1.1.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^8.2.1",
