--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-spinners": "^0.9.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.17.0"
   },
   "scripts": {
     "start": "node server/server.js",
